<resources>
    <string name="app_name">Messaging</string>
    <string name="User">User</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_accout_sign_up">Don\'t have an accout? Sign up.</string>
    <string name="password">Password</string>
    <string name="select_your_photo">Select your Photo</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In.</string>
    <string name="register">Register</string>
</resources>
